# atlas-career-os

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  db.py  deps.py  exceptions.py  logging.py  roles.py  schemas.py  security.py
backend/app/db/: base.py  registry.py
backend/app/domains/admin/: audit.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/ai/: feature_schemas.py  guardrails.py  models.py  router.py  schemas.py  service.py  usage.py
backend/app/domains/applications/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/auth/: repository.py  router.py  schemas.py  service.py
backend/app/domains/candidates/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/consent/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/credentials/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/employers/: repository.py  router.py  (+2 more)
backend/app/scripts/: init_db.py  seed.py
backend/app/workers/: arq_settings.py
backend/atlas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_ai.py  test_applications.py  test_auth_flow.py  test_consent.py  test_jobs.py
backend/tests/unit/: test_foundation.py  test_matching.py
(+153 files in other folders)
