[project]
name = "atlas-backend"
version = "0.1.0"
description = "Atlas — Asia's Career OS. FastAPI backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
    "httpx>=0.28",
    "openai>=1.59",
    "tenacity>=9.0",
    "structlog>=24.4",
    "slowapi>=0.1.9",
    "arq>=0.26",
    "redis>=5.2",
    "email-validator>=2.2",
    "python-multipart>=0.0.18",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.8",
    "polyfactory>=2.18",
    "ruff>=0.8",
    "mypy>=1.13",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "ASYNC"]
ignore = ["B008"]  # B008: FastAPI Depends() in defaults is intentional

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
